inento de arreglo de main (no funciona)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
+        "*.py": "python",
+        "*.sql": "oraclesql",
         "array": "cpp",
         "atomic": "cpp",
         "*.tcc": "cpp",
@@ -40,6 +42,10 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "numeric": "cpp",
+        "random": "cpp"
     }
 }
